# epublic-library

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  QUICKSTART.md  README.md  TESTING.md  TEST_SUMMARY.md  pyproject.toml  test_books.py
.github/workflows/: tests.yml
scripts/: install-hooks.sh
src/: __init__.py  books.py  cli.py  main.py  search.py
tests/: conftest.py  test_books.py  test_cache.py  test_cli.py  test_main_tools.py  test_search.py  test_search_fuzzy.py
