[project]
name = "epublic-library"
version = "0.1.0"
description = "MCP server for searching EPUB books by metadata and topic"
requires-python = ">=3.9"
authors = [{name = "Chris Ford"}]
dependencies = [
    "mcp>=0.1",
    "ebooklib>=0.18",
    "platformdirs>=4.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
fuzzy = [
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.12",
]
